--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "watch": "babel-watch -L src/index.js",
+    "deploy": "node-deploy $(pwd)",
+    "linkall": "yarn link node-deploy",
+    "build": "webpack --progress"
+  },
+  "devDependencies": {
+    "babel-watch": "^7.0.0"
+  },
   "dependencies": {
     "@babel/core": "^7.8.7",
     "@babel/polyfill": "^7.8.7",
