--- a/websocket/package.json
+++ b/websocket/package.json
@@ -23,12 +23,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-ws": "^4.0.0",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
-    "ws": "^7.2.3",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "url": "^0.11.0",
+    "ws": "^7.2.3"
   }
-
 }
