--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,19 @@
     "apollo-link-http": "^1.5.16",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "lodash": "^4.17.15",
     "react": "^16.8.3",
     "react-apollo": "^3.1.3",
     "react-dom": ">= 16.8.0",
     "react-hook-form": "^5.0.0",
     "react-is": ">= 16.8.0",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.1",
+    "uuid": "^7.0.2",
     "yup": "^0.28.3"
   },
   "alias": {
